refactor(document): 优化状态同步逻辑提升状态准确性
- 调整状态进度计算方式，避免除零错误
- 替换List获取首元素方式，避免调用错误方法
- 文档列表查询时同步从LightRAG刷新解析状态并回写数据库
- 新增按需刷新文档状态方法，确保返回状态与LightRAG一致
- 保持查询接口对非终态文档状态实时更新，提高前端数据准确性